--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,14 +24,18 @@ margin-bottom: 40px;
 	margin-bottom:45px;
 }
 
+.entry-content .std {
+	font-size:14px;
+	padding:20px;
+	margin: 0;
+	color:#eee;
+	font-weight: 300;
+	border-top: 2px solid rgba(255,255,255,.08);
+}
+
 .entry-content {
-    font-size:14px;
     margin-top:10px;
-    padding:10px 20px 20px;
-    color:#eee;
-    font-weight: 300;
-    border-top: 2px solid rgba(255,255,255,.08);
-    border-bottom: 2px solid rgba(255,255,255,.08);
+	border-bottom: 2px solid rgba(255,255,255,.08);
 }
 
 .entry-date {
