--- a/theme/layout/entry_home.phtml
+++ b/theme/layout/entry_home.phtml
@@ -5,5 +5,5 @@
         <img src="{{entry preview}}" alt="{{entry title}}"/>
     </a>
     {{entry mobile_images}}
-	<p class="entry-content">{{entry content}}</p>
+	<div class="entry-content">{{entry content}}</div>
 </div>
