Added image dimensions and about tags to structured data

--- a/theme/layout/entry.phtml
+++ b/theme/layout/entry.phtml
@@ -1,6 +1,6 @@
 <!-- Entry ID {{entry id}} -->
 <div class="entry-view" vocab="http://schema.org/" typeof="CreativeWorkSeries">
-    <div style="display:none;">
+    <div class="hidden">
         <span property="author" typeof="Thing">
             <span property="name">Spartacus Wallpaper</span>
             <span property="url">http://spartacuswallpaper.com/about</span>
