--- a/theme/includes/footer.phtml
+++ b/theme/includes/footer.phtml
@@ -1,6 +1,7 @@
 	<div id="copy">
 		<p>Site design &copy;{{date_year}} by Spartacus Wallpaper.</p>
 	</div>
+    </div>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
