--- a/theme/includes/head.phtml
+++ b/theme/includes/head.phtml
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{head}}
-    <title>{{title}}Desktop Backgrounds | Spartacus Wallpaper</title>
+    <title>{{title}}Desktop Backgrounds | Mobile Home Screens | Spartacus Wallpaper</title>
+    <meta name="description" content="{{meta_description}}">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Patua+One" rel="stylesheet">
     <link href="{{baseurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{baseurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
