--- a/theme/layout/entry.phtml
+++ b/theme/layout/entry.phtml
@@ -1,5 +1,5 @@
 <!-- Entry ID {{entry id}} -->
-<div class="entry-view" vocab="http://schema.org/" typeof="CreativeWorkSeries">
+<div class="entry-view entry-page" vocab="http://schema.org/" typeof="CreativeWorkSeries">
     <div class="hidden">
         <span property="author" typeof="Thing">
             <span property="name">Spartacus Wallpaper</span>
@@ -24,7 +24,7 @@
             {{entry tags}}
     	</div>
     	<div class="social-media pull-right">
-    		<h4>Share</h4>
+    		<strong>Share</strong>
             <ul>
                 <li><a class="facebook" href="javascript:share();">Share</a></li>
                 <li><a class="twitter" href="http://twitter.com/intent/tweet?url={{entry url}}&text={{entry title}}+-+{{entry preview}}&hashtags=wallpaper,background">Tweet</a></li>
@@ -33,7 +33,7 @@
     	</div>
 	</div>
 	<div class="clearfix"></div>
-    <h4>Wallpaper Types</h4>
+    <strong>Wallpaper Types</strong>
 	<div class="entry-images">
         {{entry image_gallery}}	
 	</div>
