--- a/theme/layout/entry_home.phtml
+++ b/theme/layout/entry_home.phtml
@@ -5,5 +5,10 @@
         <img src="{{entry preview}}" alt="{{entry title}}"/>
     </a>
     {{entry mobile_images}}
+    <div class="row-fluid">
+        <div class="entry-tags">
+            {{entry tags}}
+        </div>
+    </div>
 	<div class="entry-content">{{entry content}}</div>
 </div>
