--- a/theme/layout/tag.phtml
+++ b/theme/layout/tag.phtml
@@ -1,6 +1,6 @@
 <div class="{{tag classes}}">
     <p class="entry-title"><a href="{{tag slug}}">{{tag title}}</a></p>
-    <div class="entry-image {{tag mobile}}"><a href="{{tag slug}}" title="{{tag title}}"><img src="{{tag thumb}}" alt="{{tag title}}"/></a></div>
+    <div class="entry-image {{tag mobile}}"><a href="{{tag slug}}" title="{{tag title}}"><img class="lazy" data-original="{{tag thumb}}" alt="{{tag title}}"/></a></div>
     {{tag mobile_images}}
     <p class="entry-date">{{tag date}}</p>
 </div>
