--- a/theme/includes/head.phtml
+++ b/theme/includes/head.phtml
@@ -11,7 +11,9 @@
     <link href="{{baseurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{baseurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/favicon.ico">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="{{baseurl}}js/jquery.lazyload.js"></script>
     <script src="{{baseurl}}js/custom.js"></script>
     <script src="{{baseurl}}js/banner.js"></script>
     <script src="{{baseurl}}js/ad.js"></script>
