--- a/theme/layout/entry_home.phtml
+++ b/theme/layout/entry_home.phtml
@@ -2,7 +2,7 @@
 	<h2 class="entry-title"><a href="{{baseurl}}{{entry url_path}}" title="{{entry title}}">{{entry title}}</a></h2>
 	<p class="entry-date">{{entry published_at}}</p>
 	<a href="{{baseurl}}{{entry url_path}}" class="entry-preview-image {{entry mobile}}" title="{{entry title}}">
-        <img src="{{entry preview}}" alt="{{entry title}}"/>
+        <img class="lazy" data-original="{{entry preview}}" alt="{{entry title}}"/>
     </a>
     {{entry mobile_images}}
     <div class="row-fluid">
